tests/valid/ListGenerator_Valid_10.whiley
function f() -> (int[][] ys):
    return [[0]; 1]

public export method test():
    assume f() == [[0]]
