tests/invalid/List_Invalid_7.whiley
function List(int tag) -> [int]:
    [int] r
    r[0] = tag
    return r
